--- a/src/app/admin/games/games.component.html
+++ b/src/app/admin/games/games.component.html
@@ -33,7 +33,7 @@
                                     <div class="col-md-4 product_img">
                                         <img id= "image"  class="img-responsive">
                                          <br/>
-                                         <a id="users"></a>
+                                         <a [routerLink]="['/admin',idAdmin,'games',idGame,'users']" id="users" (click)="hidenMoal()" ></a>
                                     </div>
                                     <div class="col-md-8 product_content">
                                         <p id="summary"></p>                                
