--- a/src/app/admin/parameter/parameter.component.css
+++ b/src/app/admin/parameter/parameter.component.css
@@ -1,17 +1,3 @@
-/*
-/* Created by Filipe Pina
- * Specific styles of signin, register, component
- */
-/*
- * General styles
- */
-
- body, html{
-    height: 100%;
-    background-repeat: no-repeat;
-    background-color: #d3d3d3;
-    font-family: 'Oxygen', sans-serif;
-}
 
 .main{
     margin-top: 70px;
@@ -36,37 +22,181 @@ label{
    margin-bottom: 15px;
 }
 
+#playground-container {
+    height: 500px;
+    overflow: hidden !important;
+    -webkit-overflow-scrolling: touch;
+}
+
+.main{
+     margin:50px 15px;
+}
+
+h1.title { 
+	font-size: 50px;
+	font-family: 'Passion One', cursive; 
+	font-weight: 400; 
+}
+
+hr{
+	width: 10%;
+	color: #fff;
+}
+
+.form-group{
+	margin-bottom: 15px;
+}
+
+label{
+	margin-bottom: 15px;
+}
+
 input,
 input::-webkit-input-placeholder {
-   font-size: 11px;
-   padding-top: 3px;
+    font-size: 20px;
+    padding-top: 3px;
 }
 
 .main-login{
-    background-color: #fff;
-   /* shadows and rounded borders */
-   -moz-border-radius: 2px;
-   -webkit-border-radius: 2px;
-   border-radius: 2px;
-   -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-   -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+ 	background-color: #746363;
+    /* shadows and rounded borders */
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 
 }
-
+:host >>> #form .form-control {
+    height: 47px !important;
+    padding: 15px 51px !important;
+}
+.input-group {
+    -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
+}
+#button {
+    border: 1px solid #ccc;
+    margin-top: 28px;
+    padding: 6px 12px;
+    color: #666;
+    text-shadow: 0 1px #fff;
+    cursor: pointer;
+    -moz-border-radius: 3px 3px;
+    -webkit-border-radius: 3px 3px;
+    border-radius: 3px 3px;
+    -moz-box-shadow: 0 1px #fff inset, 0 1px #ddd;
+    -webkit-box-shadow: 0 1px #fff inset, 0 1px #ddd;
+    box-shadow: 0 1px #fff inset, 0 1px #ddd;
+    background: #f5f5f5;
+    background: -moz-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f5f5f5), color-stop(100%, #eeeeee));
+    background: -webkit-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
+    background: -o-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
+    background: -ms-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
+    background: linear-gradient(top, #f5f5f5 0%, #eeeeee 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#eeeeee', GradientType=0);
+}
 .main-center{
-    margin-top: 30px;
-    margin: 0 auto;
-    max-width: 330px;
-   padding: 40px 40px;
+ 	margin-top: 30px;
+ 	margin: 0 auto;
+ 	max-width: 700px;
+    padding: 10px 40px;
+	background:#2D2E2E;
+	    color: #FFF;
+    text-shadow: none;
+	-webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
+    -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
+    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
+    background: rgb(231, 221, 221); /* This is for ie8 and below */
+    background: rgba(231, 219, 219, 0.5); 
+  
 
+}
+span.input-group-addon i {
+    color: #009edf;
+    font-size: 17px;
 }
 
 .login-button{
-   margin-top: 5px;
+	margin-top: 5px;
 }
 
 .login-register{
-   font-size: 11px;
-   text-align: center;
+	font-size: 11px;
+	text-align: center;
+}
+.btn-block{
+    display: block;
+    width: 100%;
+}
+.control-label{
+    color: black;
+}
+
+.outer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 450px;
+}
+
+@media (min-width: 768px) {
+    .row{
+        padding: 0px 70px 0px 70px;
+    }
+}
+
+@media (max-width: 767px) {
+    .row{
+        padding: 0px 20px 0px 20px;
+        margin: 0px 5px 0px 5px;
+    }
+
+    h1{
+        font-size: 30px;
+    }
+}
+
+.row{
+    color: #555;
+    width: 800px;
+}
+
+:host /deep/ .completer-input {
+    width: 100%;
+    }
+
+
+:host >>> .completer-dropdown {
+    margin-top :35px !important;
+    width: 90% !important;
+    max-width: 515px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 100px;
+    color: red;
+}
+
+:host >>> .completer-row
+{ display: inherit; }
+
+:host >>> .completer-selected-row {
+    background-color: lightblue;
+    color: yellow;
+}
+
+:host >>> .completer-row p {
+    position: relative;
+    top: 50%;
+    transform: translateY(50%);
+}
+
+.btn-custom{
+    min-width: 100%; 
+}
+:host >>> .form .form-control{
+    height: 47px;
 }
