--- a/src/app/login/loginModal/loginModal.component.html
+++ b/src/app/login/loginModal/loginModal.component.html
@@ -2,9 +2,9 @@
  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <!--<div class="modal-header">
+            <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              </div>-->
+              </div>
           <div class="modal-body">
               <login></login>
           </div>
@@ -12,3 +12,5 @@
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
+
+  
