--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -46,14 +46,21 @@
                   <li role="separator" class="divider"></li> 
                   <li><a [routerLink]="['/users',user.id,'historique']">Historique</a></li>
                   <li role="separator" class="divider"></li> 
-                  <li><a  (click)="logOut()" >Déconnexion</a></li>
+                  <li><a href="#" (click)="logOut()" >Déconnexion</a></li>
                 </ul>
               </li>            
           </ul>
           <form class="navbar-form navbar-right inline-form">
-              <div class="input-group">
-                <input type="search" class="input-sm form-control" placeholder="Recherche">
-                <div class="input-group-btn">
+              <div *ngIf="logged" class="input-group" id ="search">
+                  <ng2-completer [(ngModel)]="searchStr"  
+                  [inputClass]="['form-control']"
+                  [ngModelOptions]="{standalone: true}"
+                  placeholder="recherche d'un jeux à échanger"
+                  [datasource]="dataService"
+                  [minSearchLength]="3"
+                  (ngModelChange)="refreshData()" 
+                  ></ng2-completer>                
+                    <div class="input-group-btn">
                     <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                 </div>
               </div>
