--- a/src/app/admin/navbar/navbar.component.html
+++ b/src/app/admin/navbar/navbar.component.html
@@ -41,7 +41,7 @@
                   <li role="separator" class="divider"></li> 
                   <li><a href="#">Historique</a></li>
                   <li role="separator" class="divider"></li> 
-                  <li><a  (click)="logOut()">Déconnexion</a></li>
+                  <li><a href="#" (click)="logOut()">Déconnexion</a></li>
                 </ul>
               </li>            
           </ul>
