--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -55,14 +55,13 @@
                   <ng2-completer [(ngModel)]="searchStr"  
                   [inputClass]="['form-control']"
                   [ngModelOptions]="{standalone: true}"
-                  placeholder="recherche d'un jeux à échanger"
+                  placeholder="echanger...."
                   [datasource]="dataService"
                   [minSearchLength]="3"
-                  (ngModelChange)="refreshData()" 
-                  ></ng2-completer>                
-                    <div class="input-group-btn">
-                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                </div>
+                  (ngModelChange)="refreshData()"></ng2-completer>                
+                  <div class="input-group-btn">
+                    <button class="btn btn-default" (click)="searchForExchanging(searchStr)"><i class="glyphicon glyphicon-search"></i></button>
+                  </div>
               </div>
             </form>
   
