--- a/src/app/myGames/myGames.component.html
+++ b/src/app/myGames/myGames.component.html
@@ -18,7 +18,7 @@
                             </div>
                             <div><b>Plateforme :</b> {{game.platform}}</div>
                             <button type="button" class="btn btn-danger" (click)="dynamicModal(game.id, game.game_name, game.platform)" 
-                            data-toggle="modal" data-target="#modalDescription">Retirer</button>
+                            data-toggle="modal" data-target="#modalDescription"><span class="glyphicon glyphicon-trash"></span></button>
                         </div>
                     </div>
                     <hr class="style-two" />
