--- a/src/app/gamesSuggested/gamesSuggested.component.html
+++ b/src/app/gamesSuggested/gamesSuggested.component.html
@@ -20,11 +20,18 @@
                         <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12">
                             <h5>Propriétaire : <a [routerLink]="['/users',myId,'profile',gameU.idUser]">{{gameU.firstName}}</a></h5>
                             <h5>Addresse :</h5>
-                            <h5>{{gameU.address}}</h5>                        
+                            <h5>{{gameU.address}}</h5>
+                            <h5>Selectionnez le mode de transport :</h5> 
+                            <select class="form-control" id="mode" (change)="onChange($event.target.value,gameU.address)" >
+                                    <option selected>voiture</option>
+                                    <option>marche</option>
+                                    <option>transport public</option>
+                                    <option>vélo</option>
+                            </select>                       
                         </div>
                         <div class="col-lg-12">
                             <button type="button" id ="change" class="btn btn-primary" 
-                        data-toggle="modal"  data-target="#modalExchange" (click)="exchange(gameU.idGameUser,gameU.address)" >Echanger</button> 
+                        data-toggle="modal"  data-target="#modalExchange" (click)="exchange(gameU.idGameUser)" >Echanger</button> 
                         </div>
                     </a>
                 </div>
@@ -47,7 +54,7 @@
                             </div>
                                 <div class="message">Veuillez séléctionner le jeu à échanger</div>
                                 <div>   
-                                    <select id="game" #selectedCategory >
+                                    <select id="game" class="form-control" #selectedCategory >
                                         <option *ngFor="let game of games" [value]="game.id">{{game.game_name}}  {{game.platform}}</option>                            
                                     </select>
                                 </div>
